moved GET request handling to UserServlet

--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -31,7 +31,7 @@
         <h1 class="h3 mb-3 font-weight-normal" style="margin-top: 0px;"></h1>
     </div>
 
-    <form action="userauth" method="get" style="margin-top: -80px;">
+    <form action="users" method="get" style="margin-top: -80px;">
         <div class="form-label-group">
             <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
             <label for="inputEmail">username@revature.net</label>
@@ -40,7 +40,7 @@
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
     </form>
 
-    <form action="userauth" method="get"  >
+    <form action="users" method="get"  >
         <div class="form-label-group">
             <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
             <label for="inputPassword">User ID</label>
@@ -48,7 +48,7 @@
 
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
     </form>
-    <form action="userauth" method="get" >
+    <form action="users" method="get" >
         &nbsp;&nbsp;
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
     </form>
