--- a/LoginApp/src/main/webapp/New folder/index0.html
+++ b/LoginApp/src/main/webapp/New folder/index0.html
@@ -9,21 +9,21 @@
 <!-- form action points to the endpoint /login -->
 <!-- method="post" makes the servlet use the doPost method-->
     <div class="div1 col-md-6 col-xl-4 col-8">
-    <form action="userauth" method="get">
+    <form action="userauth/login" method="get">
         ID: <input type="text" size="14" name="id"/>
         &nbsp;
         <input type="submit" value="Find User" />
     </form>
 
     <br/><br/>
-    <form action="userauth" method="get">
+    <form action="userauth/login" method="get">
         Username: <input type="text" size="14" name="username", value="@revature.net"/>
         &nbsp;
         <input type="submit" value="Find User" />
     </form>
 
     <br/><br/>
-    <form action="userauth" method="get">
+    <form action="userauth/login" method="get">
         Get all users:
         &nbsp;&nbsp;
         <input type="submit" value="Get All Users">
