--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -24,14 +24,14 @@
 </head>
 
 <body style="background-color:rgb(228,216,195);">
-<div class="form-signin" style="margin-top:-20%">
+<div class="form-signin">
     <a target="_blank" href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="position:fixed;float:left; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
         <p style="margin-left:-30%; margin-top:-20%;">Find</p>
         <p style="margin-left:-30%; margin-top:-90%;">User</p>
     </div></a>
     <div class="text-center mb-4">
         <img class="mb-4" src="images/Endpoint.png" alt="" width="288" height="288" >
-        <h1 class="h3 mb-3 font-weight-normal" style="margin-top: 0px;"></h1>
+        <h1 class="h3 mb-3 font-weight-normal" style="margin-top: -80px;"></h1>
     </div>
 
     <form action="userauth/login" method="get" style="margin-top: -80px;">
