--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -23,7 +23,7 @@
 
 <body style="background-color:rgb(228,216,195);">
 <div class="form-signin">
-    <a target="_blank" href="login"><div class="btn btn-lg btn-primary btn-block" style="position:fixed;float:left; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+    <a target="_blank" href="login"><div class="btn btn-lg btn-primary btn-block" style="z-index: 10;position:fixed;float:left; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
         <p style="margin-left:-50%; margin-top:10%;">Login</p>
     </div></a>
     <div class="text-center mb-4">
