--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -25,7 +25,7 @@
 
 <body style="background-color:rgb(228,216,195);">
 <div class="form-signin">
-    <a target="_blank" href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="position:fixed;float:left; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+    <a target="_blank" href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="z-index: 10;position:fixed;float:left; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
         <p style="margin-left:-30%; margin-top:-20%;">Find</p>
         <p style="margin-left:-30%; margin-top:-90%;">User</p>
     </div></a>
