HTML and JS function update

--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -52,6 +52,8 @@
         &nbsp;&nbsp;
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
     </form>
+    <p class="alert alert-warning" id="error-message" style="margin-top:10px;" hidden></p>
+    <p class="alert alert-primary" id="feedback" style="margin-top:10px;" hidden></p>
 
 
     <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
