--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -43,7 +43,8 @@
             <input type="password" id="login-password" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
             <label for="login-password" style="color:rgb(128,82,62); font-weight:500;">Password</label>
         </div>
-        <p class="alert alert-danger" id="error-message" hidden></p>
+        <p class="alert alert-warning" id="error-message" style="margin-top:10px;" hidden></p>
+        <p class="alert alert-primary" id="feedback" style="margin-top:10px;" hidden></p>
 
 
         <input class="btn btn-lg btn-primary btn-block" id="login-button" value="Login" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
