--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -25,10 +25,25 @@
 
 <body style="background-color:rgb(228,216,195);">
 <div class="form-signin">
-    <a target="_blank" href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="z-index: 10;position:fixed;float:left; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
-        <p style="margin-left:-30%; margin-top:-20%;">Find</p>
-        <p style="margin-left:-30%; margin-top:-90%;">User</p>
-    </div></a>
+    <div style="z-index: 10;position:fixed;float:left; ">
+        <div>
+            <a href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="width:60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+                <p style="margin-left:-30%; margin-top:-20%;">Find</p>
+                <p style="margin-left:-30%; margin-top:-90%;">User</p>
+            </div></a>
+        </div>
+        <div>
+            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(210,176,154);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
+                <p style="margin-left:-50%; margin-top:10%;">Login</p>
+            </div></a>
+        </div>
+        <div>
+            <a href="register.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+                <p style="margin-left:-50%; margin-top:35%; font-size:0.7em;">Register</p>
+            </div></a>
+        </div>
+    </div>
+
     <div class="text-center mb-4">
         <img class="mb-4" src="images/Endpoint.png" alt="" width="288" height="288" >
         <h1 class="h3 mb-3 font-weight-normal" style="margin-top: -80px;"></h1>
