--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -20,7 +20,7 @@
     <!-- Custom styles for this template -->
     <link href="resources/floating-labels.css" rel="stylesheet">
 
-    <script defer id="app-js" src="resources/dom-demos.js"></script>
+    <script defer id="app-js" src="resources/login.js"></script>
 </head>
 
 <body style="background-color:rgb(228,216,195);">
