--- a/Project 2/Prototype/src/main/webapp/login.html
+++ b/Project 2/Prototype/src/main/webapp/login.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="text-center mb-4">
-        <img class="mb-4" src="images/Endpoint.png" alt="" width="288" height="288" >
+        <img class="mb-4" src="images/Notecard.png" alt="" width="288" height="288" >
         <h1 class="h3 mb-3 font-weight-normal" style="margin-top: -80px;"></h1>
     </div>
 
