--- a/Project 2/Prototype/src/main/webapp/register.html
+++ b/Project 2/Prototype/src/main/webapp/register.html
@@ -24,7 +24,7 @@
 </head>
 
 <body style="background-color:rgb(228,216,195);">
-<div class="form-signin" style="margin-top: 50% !important">
+<div class="form-signin" style="margin-top: 0% !important">
     <div style="z-index: 10;position:fixed;float:left; ">
         <div>
             <a href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="width:60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
@@ -45,7 +45,7 @@
     </div>
 
     <div class="text-center mb-4">
-        <img class="mb-4" src="images/Endpoint.png" alt="" width="288" height="288" >
+        <img class="mb-4" src="images/Notecard.png" alt="" width="288" height="288" >
         <h1 class="h3 mb-3 font-weight-normal" style="margin-top: -80px;"></h1>
     </div>
 
