--- a/Project 2/Prototype/src/main/webapp/index.html
+++ b/Project 2/Prototype/src/main/webapp/index.html
@@ -25,18 +25,18 @@
 <div class="form-signin">
     <div style="z-index: 10;position:fixed;float:left; ">
         <div>
-            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(83,186,255);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
+            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
                 <p style="margin-left:-30%; margin-top:-20%;">Find</p>
                 <p style="margin-left:-30%; margin-top:-90%;">User</p>
             </div></a>
         </div>
         <div>
-            <a href="login.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+            <a href="login.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
                 <p style="margin-left:-50%; margin-top:10%;">Login</p>
             </div></a>
         </div>
         <div>
-            <a href="register.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+            <a href="register.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
                 <p style="margin-left:-50%; margin-top:35%; font-size:0.7em;">Register</p>
             </div></a>
         </div>
@@ -49,30 +49,30 @@
 
     <form action="users" method="get" style="margin-top: -80px;">
         <div class="form-label-group">
-            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(83,186,255);color:rgb(128,82,62);font-weight:800;"/>
+            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173);font-weight:800;"/>
             <label for="inputEmail">username@revature.net</label>
         </div>
 
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;"/>
     </form>
 
     <form action="users" method="get"  >
         <div class="form-label-group">
-            <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(83,186,255);color:rgb(128,82,62);font-weight:800;">
+            <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173);font-weight:800;">
             <label for="inputPassword">User ID</label>
         </div>
 
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;"/>
     </form>
     <form action="users" method="get" >
         &nbsp;&nbsp;
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
     </form>
     <p class="alert alert-warning" id="error-message" style="margin-top:10px;" hidden></p>
     <p class="alert alert-primary" id="feedback" style="margin-top:10px;" hidden></p>
 
 
-    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
+    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(255,255,255) !important;">&copy; 2022</p>
 </div>
 
 
