--- a/Project 2/Prototype/src/main/webapp/register.html
+++ b/Project 2/Prototype/src/main/webapp/register.html
@@ -27,18 +27,18 @@
 <div class="form-signin" style="margin-top: 0% !important">
     <div style="z-index: 10;position:fixed;float:left; ">
         <div>
-            <a href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="width:60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+            <a href="/notecard"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
                 <p style="margin-left:-30%; margin-top:-20%;">Find</p>
                 <p style="margin-left:-30%; margin-top:-90%;">User</p>
             </div></a>
         </div>
         <div>
-            <a href="login.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+            <a href="login.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
                 <p style="margin-left:-50%; margin-top:10%;">Login</p>
             </div></a>
         </div>
         <div>
-            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(83,186,255);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
+            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
                 <p style="margin-left:-50%; margin-top:35%; font-size:0.7em;">Register</p>
             </div></a>
         </div>
@@ -51,28 +51,28 @@
 
     <form action="userauth/login" method="get" style="margin-top: -80px;">
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="email" id="register-username" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(128,82,62);font-weight:800;"/>
-            <label for="register-username" style="color:rgb(128,82,62);font-weight:500;">username@revature.net</label>
+            <input type="email" id="register-username" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(0,74,173);font-weight:800;"/>
+            <label for="register-username" style="color:rgb(0,74,173);font-weight:500;">username@revature.net</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="password" id="register-password" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(128,82,62);font-weight:800;">
-            <label for="register-password" style="color:rgb(128,82,62); font-weight:500;">Password</label>
+            <input type="password" id="register-password" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(0,74,173);font-weight:800;">
+            <label for="register-password" style="color:rgb(0,74,173); font-weight:500;">Password</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="text" id="register-first-name" class="form-control" name="firstname" placeholder="First Name" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(128,82,62);font-weight:800;">
-            <label for="register-first-name" style="color:rgb(128,82,62); font-weight:500;">First Name</label>
+            <input type="text" id="register-first-name" class="form-control" name="firstname" placeholder="First Name" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(0,74,173);font-weight:800;">
+            <label for="register-first-name" style="color:rgb(0,74,173); font-weight:500;">First Name</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="text" id="register-last-name" class="form-control" name="lastname" placeholder="Last Name" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(128,82,62);font-weight:800;">
-            <label for="register-last-name" style="color:rgb(128,82,62); font-weight:500;">Last Name</label>
+            <input type="text" id="register-last-name" class="form-control" name="lastname" placeholder="Last Name" required="" autofocus="" style="background-color:rgb(83,186,255);color:rgb(0,74,173);font-weight:800;">
+            <label for="register-last-name" style="color:rgb(0,74,173); font-weight:500;">Last Name</label>
         </div>
 
-        <input class="btn btn-lg btn-primary btn-block" id="register-button" value="Register" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+        <input class="btn btn-lg btn-primary btn-block" id="register-button" value="Register" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(255,255,255);border-color:rgb(255,255,255); color:rgb(0,74,173); font-weight:500;">
     </form>
     <p class="alert alert-warning" id="error-message" style="margin-top:10px;" hidden></p>
     <p class="alert alert-primary" id="feedback" style="margin-top:10px;" hidden></p>
 
-    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
+    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(255,255,255) !important;">&copy; 2022</p>
 </div>
 
 
