--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -32,9 +32,10 @@
                 <p style="margin-left:-30%; margin-top:-90%;">User</p>
             </div></a>
         </div>
-        <div>
-            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(210,176,154);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
-                <p style="margin-left:-50%; margin-top:10%;">Login</p>
+        <div id="logout-btn">
+            <a href="#"><div class="btn btn-lg btn-primary btn-block menu-sq" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(210,176,154);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
+                <p style="margin-left:-30%; margin-top:-20%;">Log</p>
+                <p style="margin-left:-30%; margin-top:-90%;">Out</p>
             </div></a>
         </div>
         <div>
