--- a/LoginApp/src/main/webapp/register.html
+++ b/LoginApp/src/main/webapp/register.html
@@ -24,6 +24,13 @@
 </head>
 
 <body style="background-color:rgb(228,216,195);">
+<div id="response-container" hidden="false" style="z-index: 100;position:fixed;float:left; width:70%; height:80%; background-color:rgb(128,82,62); opacity: 0.8;">
+    <div id="close-response" style="z-index: 100;float:right; width:10%; height:10%; background-color:rgb(212,133,100);">
+        <p style="font-family:sans-serif;font-size:2em;text-align: center;color:rgb(128,82,62); ">x</p>
+    </div>
+    <p id="response-text" style="margin:10%; text-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px white, 0 0 4px white, 0 0 5px white, 0 0 6px white, 0 0 7px white;color:rgb(128,82,62);font-weight:500;font-size:2em;">Text</p>
+</div>
+
 <div class="form-signin" style="margin-top: 50% !important">
     <div style="z-index: 10;position:fixed;float:left; ">
         <div>
@@ -52,15 +59,15 @@
     <form action="userauth/login" method="get" style="margin-top: -80px;">
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
             <input type="email" id="register-username" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
-            <label for="register-username" style="color:rgb(128,82,62);font-weight:500;">username@revature.net</label>
+            <label for="register-username" style="color:rgb(128,82,62);font-weight:500;">username@revature.net *</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
             <input type="password" id="register-password" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
-            <label for="register-password" style="color:rgb(128,82,62); font-weight:500;">Password</label>
+            <label for="register-password" style="color:rgb(128,82,62); font-weight:500;">Password *</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
             <input type="text" id="register-first-name" class="form-control" name="firstname" placeholder="First Name" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
-            <label for="register-first-name" style="color:rgb(128,82,62); font-weight:500;">First Name</label>
+            <label for="register-first-name" style="color:rgb(128,82,62); font-weight:500;">First Name *</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
             <input type="text" id="register-last-name" class="form-control" name="lastname" placeholder="Last Name" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
