--- a/LoginApp/src/main/webapp/register.html
+++ b/LoginApp/src/main/webapp/register.html
@@ -24,7 +24,7 @@
 </head>
 
 <body style="background-color:rgb(228,216,195);">
-<div id="response-container" hidden="false" style="z-index: 100;position:fixed;float:left; width:70%; height:80%; background-color:rgb(128,82,62); opacity: 0.8;">
+<div id="response-container" hidden="true" style="z-index: 100;position:fixed;float:left; width:70%; height:80%; background-color:rgb(128,82,62); opacity: 0.8;">
     <div id="close-response" style="z-index: 100;float:right; width:10%; height:10%; background-color:rgb(212,133,100);">
         <p style="font-family:sans-serif;font-size:2em;text-align: center;color:rgb(128,82,62); ">x</p>
     </div>
