--- a/LoginApp/src/main/webapp/index_old.html
+++ b/LoginApp/src/main/webapp/index_old.html
@@ -19,8 +19,6 @@
 
     <!-- Custom styles for this template -->
     <link href="resources/floating-labels.css" rel="stylesheet">
-
-    <script defer id="app-js" src="resources/login.js"></script>
 </head>
 
 <body style="background-color:rgb(228,216,195);">
@@ -33,15 +31,14 @@
 <div class="form-signin">
     <div style="z-index: 10;position:fixed;float:left; ">
         <div>
-            <a href="/login-service"><div class="btn btn-lg btn-primary btn-block" style="width:60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+            <a href="#"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(210,176,154);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
                 <p style="margin-left:-30%; margin-top:-20%;">Find</p>
                 <p style="margin-left:-30%; margin-top:-90%;">User</p>
             </div></a>
         </div>
-        <div id="logout-btn">
-            <a href="#"><div class="btn btn-lg btn-primary btn-block menu-sq" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(210,176,154);border-color:rgb(128,82,62); color:rgb(128,82,62); font-weight:500;">
-                <p style="margin-left:-30%; margin-top:-20%;">Log</p>
-                <p style="margin-left:-30%; margin-top:-90%;">Out</p>
+        <div>
+            <a href="login.html"><div class="btn btn-lg btn-primary btn-block" style="margin-top: 5px; width: 60px;height:60px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+                <p style="margin-left:-50%; margin-top:10%;">Login</p>
             </div></a>
         </div>
         <div>
@@ -53,24 +50,33 @@
 
     <div class="text-center mb-4">
         <img class="mb-4" src="images/Endpoint.png" alt="" width="288" height="288" >
-        <h1 class="h3 mb-3 font-weight-normal" style="margin-top: -80px;"></h1>
+        <h1 class="h3 mb-3 font-weight-normal" style="margin-top: 0px;"></h1>
     </div>
 
-    <form action="userauth" method="get" style="margin-top: -80px;">
-        <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="email" id="login-username" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
-            <label for="login-username" style="color:rgb(128,82,62);font-weight:500;">username@revature.net</label>
+    <form action="users" method="get" style="margin-top: -80px;">
+        <div class="form-label-group">
+            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
+            <label for="inputEmail">username@revature.net</label>
         </div>
-        <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="password" id="login-password" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
-            <label for="login-password" style="color:rgb(128,82,62); font-weight:500;">Password</label>
-        </div>
-        <p class="alert alert-warning" id="error-message" style="margin-top:10px;" hidden></p>
-        <p class="alert alert-primary" id="feedback" style="margin-top:10px;" hidden></p>
 
-
-        <input class="btn btn-lg btn-primary btn-block" id="login-button" value="Login" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
     </form>
+
+    <form action="users" method="get"  >
+        <div class="form-label-group">
+            <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
+            <label for="inputPassword">User ID</label>
+        </div>
+
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
+    </form>
+    <form action="users" method="get" >
+        &nbsp;&nbsp;
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+    </form>
+    <p class="alert alert-warning" id="error-message" style="margin-top:10px;" hidden></p>
+    <p class="alert alert-primary" id="feedback" style="margin-top:10px;" hidden></p>
+
 
     <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
 </div>
