--- a/Quizzard/react.html
+++ b/Quizzard/react.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Java Cards</title>
+  <title>React</title>
   <link rel="stylesheet" href="style.css">
   <style>
-body {
-  background-image: url('images/merapi-2330885_1920.jpg');
-  background-repeat: no-repeat;
-}
+    body {
+      background-image: url('images/react.jpg');
+      background-repeat: repeat;
+    }
   </style>
-  <script type="text/javascript" src="script-java.js">
+  <script type="text/javascript" src="react.js">
   </script>
 </head>	
 <body>
@@ -17,11 +17,11 @@ body {
 <ul>
   <li><a href="index.html">Main</a></li>
   <li><a href="sql.html">SQL</a></li>
-  <li id="current_page"><a href="java.html">Java</a></li>
+  <li><a href="java.html">Java</a></li>
   <li><a href="htmlcss.html">HTML CSS</a></li>
   <li><a href="javascript.html">JavaScript</a></li>
   <li><a href="typescript.html">TypeScript</a></li>
-  <li><a href="react.html">React</a></li>
+  <li id="current_page"><a href="react.html">React</a></li>
 </ul>
 </header>
 
