--- a/Quizzard/index.html
+++ b/Quizzard/index.html
@@ -18,8 +18,10 @@
   <li id="current_page"><a href="index.html">Main</a></li>
   <li><a href="sql.html">SQL</a></li>
   <li><a href="java.html">Java</a></li>
-  <li><a href="webdev.html">Web Dev</a></li>
-  <li><a href="about.html">About</a></li>
+  <li><a href="htmlcss.html">HTML CSS</a></li>
+  <li><a href="javascript.html">JavaScript</a></li>
+  <li><a href="typescript.html">TypeScript</a></li>
+  <li><a href="react.html">React</a></li>
 </ul>
 </header>
 
