--- a/Quizzard/db-ts.html
+++ b/Quizzard/db-ts.html
@@ -1,4 +1,4 @@
-<h1>Why use TypeScript? Benefits over JavaScript?<h1>
+<h3>Why use TypeScript? Benefits over JavaScript</h3>
 ;;;; 
 <p>
 Typescript is a superset of JavaScript. The key augmentation TypeScript brings to JavaScript is a type system
@@ -22,8 +22,8 @@ href="https://www.stxnext.com/blog/typescript-pros-cons-javascript/">
 stxnext.com
 </a>)</p>
 
-;;;;;;;;;
-<h1>What are the primitive data types in TypeScript?<h1>
+;;;;;;;;
+<h3>What are the primitive data types in TypeScript</h3>
 ;;;; 
 <ol>
 <li>
@@ -47,12 +47,8 @@ href="https://www.c-sharpcorner.com/UploadFile/c63ec5/primitive-type-in-typescri
 c-sharpcorner.com
 </a>)</p>
 
-;;;;;;;;;
-<h1>What's the difference between null and undefined?<h1>
-;;;; 
-
-;;;;;;;;;
-<h1>What additional data types exist in TypeScript that are not included in JavaScript?<h1>
+;;;;;;;;
+<h3>What's the difference between null and undefined</h3>
 ;;;; 
 <p>
 Undefined means declared but not assigned a value. Null is an assignment value, representing no value.
@@ -61,24 +57,30 @@ Undefined means declared but not assigned a value. Null is an assignment value, 
 href="https://stackoverflow.com/questions/5076944/what-is-the-difference-between-null-and-undefined-in-javascript">
 Lodewijk at stackoverflow.com
 </a>)</p>
+;;;;;;;;
+<h3>What additional data types exist in TypeScript that are not included in JavaScript</h3>
+;;;; 
+<p>
+void, enum, class, interface, and specific number types. 
+</p>
 
-;;;;;;;;;
-<h1>What is the "any" type?<h1>
+;;;;;;;;
+<h3>What is the "any" type</h3>
 ;;;; 
 <p>
 Allows variable (re)assignment as normal in JavaScript without type checking
 </p>
 
-;;;;;;;;;
-<h1>How do you declare the type of a variable?<h1>
+;;;;;;;;
+<h3>How do you declare the type of a variable</h3>
 ;;;; 
 
 <p>
 let color: string = "blue";
 </p>
 
-;;;;;;;;;
-<h1>What does it mean for a variable to have an "inferred type"?<h1>
+;;;;;;;;
+<h3>What does it mean for a variable to have an "inferred type"</h3>
 ;;;; 
 <p>
 This kind of inference takes place when initializing variables and members, setting parameter default values, and determining function return types.
@@ -91,15 +93,15 @@ let x = 3;
 href="https://www.typescriptlang.org/docs/handbook/type-inference.html">
 typescriptlang.org
 </a>)</p>
-;;;;;;;;;
-<h1>How do you specify the return type of a function declaration?<h1>
+;;;;;;;;
+<h3>How do you specify the return type of a function declaration</h3>
 ;;;; 
 <p>
 function fctName(num: number): string { return ""+num; } // Return type string
 </p>
 
-;;;;;;;;;
-<h1>How is encapsulation used in TypeScript? h1>
+;;;;;;;;
+<h3>How is encapsulation used in TypeScript? </h3>
 ;;;; 
 <p>
 The implementation and state of each object are privately held inside a defined boundary, or class. Other objects do not have access to this class or the authority to make changes but are only able to call a list of public functions, or methods. This characteristic of data hiding provides greater program security and avoids unintended data corruption.
@@ -108,9 +110,9 @@ The implementation and state of each object are privately held inside a defined 
 href="https://dev.to/kevin_odongo35/object-oriented-programming-with-typescript-574o">
 kevin at dev.to
 </a>)</p>
-;;;;;;;;;
+;;;;;;;;
 
-<h1>How is abstraction used in TypeScript? h1>
+<h3>How is abstraction used in TypeScript? </h3>
 ;;;; 
 <p>
 Objects only reveal internal mechanisms that are relevant for the use of other objects, hiding any unnecessary implementation code. This concept helps developers more easily make changes and additions over time.
@@ -122,9 +124,9 @@ This is quite powerful in development and TypeScript provides us several ways of
 href="https://dev.to/kevin_odongo35/object-oriented-programming-with-typescript-574o">
 kevin at dev.to
 </a>)</p>
-;;;;;;;;;
+;;;;;;;;
 
-<h1>How is inheritance used in TypeScript? h1>
+<h3>How is inheritance used in TypeScript? </h3>
 ;;;; 
 <p>
 Relationships and subclasses between objects can be assigned, allowing developers to reuse a common logic while still maintaining a unique hierarchy. 
@@ -136,9 +138,9 @@ class classA extends classB {} // means classA inherits all the fields and metho
 href="https://dev.to/kevin_odongo35/object-oriented-programming-with-typescript-574o">
 kevin at dev.to
 </a>)</p>
-;;;;;;;;;
+;;;;;;;;
 
-<h1>How is polymorphism used in TypeScript? h1>
+<h3>How is polymorphism used in TypeScript? </h3>
 ;;;; 
 <p>
 Objects can take on more than one form depending on the context. The program will determine which meaning or usage is necessary for each execution of that object, cutting down the need to duplicate code.
@@ -148,14 +150,14 @@ href="https://dev.to/kevin_odongo35/object-oriented-programming-with-typescript-
 kevin at dev.to
 </a>)</p>
 
-;;;;;;;;;
-<h1>What is an interface in TypeScript? Are they the same as Java interfaces?]<h1>
+;;;;;;;;
+<h3>What is an interface in TypeScript? Are they the same as Java interfaces?</h3>
 ;;;; 
 <p>
 In TypeScript, an interface is used to describe the structure of an object. It contains definition of methods and properties. 
 </p>
-;;;;;;;;;
-<h1>What are union types in TypeScript?<h1>
+;;;;;;;;
+<h3>What are union types in TypeScript</h3>
 ;;;; 
 <p>
 A union type allows us to define a variable with multiple types. The union type variables are defined using the pipe ('|') symbol between the types.
@@ -165,27 +167,27 @@ href="https://howtodoinjava.com/typescript/union-types/">
 howtodoinjava.com
 </a>)</p>
 
-;;;;;;;;;
-<h1>What is the purpose of the "?" in the following code: props.currentUser?.username<h1>
+;;;;;;;;
+<h3>What is the purpose of the "?" in the following code: props.currentUser?.username</h3>
 ;;;; 
 <p>
 This is called "optional chaining" used for optional property access. TypeScript will immediately stop running the expression if currentUser is null or undefined.
 </p>
-;;;;;;;;;
-<h1>What is the purpose of the tsconfig.json file?<h1>
+;;;;;;;;
+<h3>What is the purpose of the tsconfig.json file</h3>
 ;;;; 
 <p>
 This determines what rules that TypeScript will enforce. 
 </p>
 
-;;;;;;;;;
-<h1>What does "transpilation" mean? How is it different than "compilation"?<h1>
+;;;;;;;;
+<h3>What does "transpilation" mean? How is it different than "compilation"</h3>
 ;;;; 
 <p>
 We use the term "transpilation" because TypeScript and JavaScript have a similar abstraction level, whereas compilation refers to translation between languages of differing abstraction levels.
 </p>
-;;;;;;;;;
-<h1>What version of JavaScript does TypeScript transpile into by default?<h1>
+;;;;;;;;
+<h3>What version of JavaScript does TypeScript transpile into by default</h3>
 ;;;;
 <p>
 It defaults to ES3, but you can use the --target flag to specify a newer version, and some features will take advantage of that. 
