--- a/Quizzard/typescript.html
+++ b/Quizzard/typescript.html
@@ -9,7 +9,7 @@
       background-repeat: repeat;
     }
   </style>
-  <script type="text/javascript" src="typescript.js">
+  <script type="text/javascript" src="script-typescript.js">
   </script>
 </head>	
 <body>
