updated CSS and db

--- a/Quizzard/htmlcss.html
+++ b/Quizzard/htmlcss.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="style.css">
   <style>
     body {
-      background-image: url('images/htmlcss.jpg');
-      background-repeat: repeat;
+      background-image: url('images/webdev.jpg');
+      background-repeat: no-repeat;
     }
   </style>
   <script type="text/javascript" src="script-htmlcss.js">
