--- a/Quizzard/javascript.html
+++ b/Quizzard/javascript.html
@@ -6,10 +6,11 @@
   <style>
     body {
       background-image: url('images/javascript.jpg');
-      background-repeat: repeat;
+      background-repeat: no-repeat;
+      background-color: rgb(121, 80, 48);
     }
   </style>
-  <script type="text/javascript" src="javascript.js">
+  <script type="text/javascript" src="script-javascript.js">
   </script>
 </head>	
 <body>
