--- a/Quizzard/react.html
+++ b/Quizzard/react.html
@@ -6,10 +6,11 @@
   <style>
     body {
       background-image: url('images/react.jpg');
-      background-repeat: repeat;
+      background-repeat: no-repeat;
+      background-color: rgb(0, 61, 108);
     }
   </style>
-  <script type="text/javascript" src="react.js">
+  <script type="text/javascript" src="script-react.js">
   </script>
 </head>	
 <body>
