--- a/Quizzard/sql.html
+++ b/Quizzard/sql.html
@@ -6,7 +6,8 @@
   <style>
     body {
       background-image: url('images/server.jpg');
-      background-repeat: repeat;
+      background-repeat: no-repeat;
+      background-color: rgb(242,233,230);
     }
   </style>
   <script type="text/javascript" src="script.js">
