--- a/Quizzard/typescript.html
+++ b/Quizzard/typescript.html
@@ -6,7 +6,8 @@
   <style>
     body {
       background-image: url('images/typescript.jpg');
-      background-repeat: repeat;
+      background-repeat: no-repeat;
+      background-color: rgb(168,202,251);
     }
   </style>
   <script type="text/javascript" src="script-typescript.js">
