--- a/Quizzard/javascript.html
+++ b/Quizzard/javascript.html
@@ -10,7 +10,7 @@
       background-color: rgb(121, 80, 48);
     }
   </style>
-  <script type="text/javascript" src="script-javascript.js">
+  <script type="text/javascript" src="script-javascript-basic.js">
   </script>
 </head>	
 <body>
@@ -20,7 +20,7 @@
   <li><a href="sql.html">SQL</a></li>
   <li><a href="java.html">Java</a></li>
   <li><a href="htmlcss.html">HTML CSS</a></li>
-  <li id="current_page"><a href="javascript.html">JavaScript</a></li>
+  <li id="current_page"><a href="javascript.html">JavaScript Basic</a></li>
   <li><a href="typescript.html">TypeScript</a></li>
   <li><a href="react.html">React</a></li>
 </ul>
