updated JavaScript ref

--- a/Quizzard/javascript.html
+++ b/Quizzard/javascript.html
@@ -10,7 +10,7 @@
       background-color: rgb(121, 80, 48);
     }
   </style>
-  <script type="text/javascript" src="script-javascript-basic.js">
+  <script type="text/javascript" src="script-javascript.js">
   </script>
 </head>	
 <body>
